--- a/colab/yolov8_object_detection.ipynb
+++ b/colab/yolov8_object_detection.ipynb
@@ -9,7 +9,7 @@
         "# Open Image v7 Object detection using YOLOv8\n",
         "\n",
         "<table align=\"left\"><td>\n",
-        "  <a target=\"_blank\"  href=\"https://github.com/mmravak/object-detection-yolov8/blob/main/colab/yolov8_object_detection.ipynb\">\n",
+        "  <a target=\"_blank\"  href=\"https://colab.research.google.com/drive/1RtPTmGTpYKN7KiABjWfEaLc4l4EeCRxt?usp=drive_link\">\n",
         "    <img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />Run in Google Colab\n",
         "  </a>\n",
         "</td><td>\n",
